[project]
name = "agent-env-ledger"
version = "0.1.0"
description = "Local environment memory for frontier coding agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Amit Brahmbhatt" }
]
license = { text = "Apache-2.0" }
dependencies = [
  "typer",
  "rich",
  "pydantic",
  "pyyaml",
  "platformdirs",
]

[project.scripts]
agent-ledger = "agent_env_ledger.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
